updated add authentification with jwt

--- a/.env
+++ b/.env
@@ -2,10 +2,10 @@ SERVER_HOST=localhost
 SERVER_PORT=9000
 
 DB_HOST=localhost
-DB_PORT=3306
+DB_PORT=5432
 DB_NAME=db_book_fiber
-DB_USER=postgress
-DB_USER=postgress
+DB_USER=postgres
+DB_PASSWORD=postgres
 DB_TZ=Asia/Jakarta
 
 JWT_KEY=secret
