--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 SERVER_HOST=localhost
 SERVER_PORT=9000
+SERVER_ASSET_URL=http://localhost:9000/media
 
 DB_HOST=localhost
 DB_PORT=5432
@@ -10,3 +11,5 @@ DB_TZ=Asia/Jakarta
 
 JWT_KEY=secret
 JWT_EXP=60
+
+STORAGE_PATH=E:\proyek\book-fiber\storage\
