--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 SERVER_HOST=localhost
 SERVER_PORT=9000
-SERVER_ASSET_URL=http://localhost:9000/media
+SERVER_ASSET_URL=localhost:9000/media
 
 DB_HOST=localhost
 DB_PORT=5432
